# bot_relatorio_lanctos_dominio

./: .gitignore  README.md  bot.py  gui.py  pyproject.toml  requirements.txt
botPython/: bot.py
